fix: mockup shifted down, center between line 2-3 of title

--- a/style.css
+++ b/style.css
@@ -724,7 +724,7 @@
   padding-top: 0;
   margin-left: auto;
   width: 100%;
-  transform: translateY(-60px);
+  transform: translateY(80px);
 }
 .hero-right-top {
   flex: 1;
